# anyskin-slip-detection

./: .gitignore  README.md  setup.cfg
src/: convert.py  lstm.py  pred.py  train.py
