[metadata]
name = anyskin-slip-detection
version = 0.1.0
author = Pollen Robotics
author_email = contact@pollen-robotics.com
url = https://github.com/pollen-robotics/anyskin-slip-detection
description = Slip detection training code
long_description = file: README.md
long_description_content_type = text/markdown


[options]
packages = find:
zip_safe = True
include_package_data = True
package_dir=
    =src
install_requires =
    torch==2.6.0
    datasets==3.3.2
    safetensors==0.5.3
    scikit-learn==1.6.1

[options.packages.find]
where=src

[options.package_data]
config_files =
  *.json

[options.extras_require]
dev = black==25.1.0
      flake8==7.1.2
      mypy==1.15.0
      isort==6.0.1
      pydocstyle==6.3.0


[flake8]
exclude = tests
max-line-length = 128
extend-ignore = E203
max-complexity = 10


[mypy]
ignore_missing_imports = True
exclude = tests
strict = True
plugins = numpy.typing.mypy_plugin
explicit_package_bases = True